ca7 dropdown complete

--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.1-Hardware/7.1-Hardware.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.1-Hardware/7.1-Hardware.html
@@ -21,7 +21,8 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#7.1.1">7.1.1 - Understand the features and use of different physical computers</option>
+            <option value="#7.1.2">7.1.2 - Understand the features and use of different types of hardware devices</option>
         </select>
         <br>
         <input type="submit" value="Submit">
