--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.2-Software/7.2-Software.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.2-Software/7.2-Software.html
@@ -21,7 +21,10 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#7.2.1">7.2.1 - Understand the features and use of operating systems</option>
+            <option value="#7.2.2">7.2.2 - Understand the features and use of common utilities</option>
+            <option value="#7.2.3">7.2.3 - Understand the features and use of common code development tools</option>
+            <option value="#7.2.4">7.2.4 - Understand the features and use of common application software</option>
         </select>
         <br>
         <input type="submit" value="Submit">
