--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.4-Virtual-Environments/7.4-Virtual-Environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.4-Virtual-Environments/7.4-Virtual-Environments.html
@@ -21,7 +21,10 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#7.4.1">7.4.1 - Understand the role and charachteristics of common virtual environment components</option>
+            <option value="#7.4.2">7.4.2 - Understand the key features of virtual environments</option>
+            <option value="#7.4.3">7.4.3 - Understand the benefits of the use of virtual environments</option>
+            <option value="#7.4.4">7.4.4 - Understand the drawbacks of the use of virtual environments</option>
         </select>
         <br>
         <input type="submit" value="Submit">
