--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html
@@ -21,7 +21,10 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#7.5.1">7.5.1 - Understand different types of cloud</option>7
+            <option value="#7.5.2">7.5.2 - Understand the benefits of cloud computing</option>
+            <option value="#7.5.3">7.5.3 - Understand common cloud delivery models</option>
+
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -123,7 +126,7 @@
                 </tr>
                 <tr>
                     <td>Example</td>
-                    <td>Bank’s private server</td>
+                    <td>Bank's private server</td>
                     <td>Website hosted on AWS</td>
                 </tr>
             </tbody>
