--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html
@@ -21,7 +21,8 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#7.6.1">7.6.1 - Understand the benefits of resilient environments and the impact on organisations and clients</option>
+            <option value="#7.6.2">7.6.2 - Understand methods to improve resilience in digital environments</option>
         </select>
         <br>
         <input type="submit" value="Submit">
