--- a/main/html/index.html
+++ b/main/html/index.html
@@ -14,8 +14,49 @@
       <div class="header-text">      
         <h1>TLevelTutor</h1>
       </div>
-    
   </header>
+
+  <div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+    <a href="./index.html">Home</a>
+
+    <div class="menu-item">
+      <a href="./content-Areas.html">Content Areas</a>
+      <div class="submenu">
+        <a href="./content-areas/CA1 - Problem Solving/problem-solving.html">CA1</a>
+        <a href="./content-areas/CA2 - Intro To Programming/intro-to-programming.html">CA2</a>
+        <a href="./content-areas/CA3 - Emerging Issues/emerging-issues.html">CA3</a>
+        <a href="./content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html">CA4</a>
+
+        <a href="./content-areas/CA5 - Business Context/business-context.html">CA5</a>
+        <a href="./content-areas/CA6 - Data/data.html">CA6</a>
+        <a href="./content-areas/CA7 - Digital Environments/digital-environments.html">CA7</a>
+        <a href="./content-areas/CA8 - Security/security.html">CA8</a>
+      </div>
+    </div>
+
+    <a href="#"></a>
+    
+    <div class="menu-item">
+      <a href="./Esp.html">Employer Set Project (ESP)</a>
+      <div class="submenu">
+        <a href="./employer-set-project/Pre-Task/Pre-Task.html">Pre-Task</a>
+        <a href="./employer-set-project/Task 1-Planning-A-Project/">Task 1</a>
+        <a href="./employer-set-project/Task 2-Debugging-Existing-Code/Task2.html">Task 2</a>
+        <a href="./employer-set-project/Task 3-Designing-A-Solution/Task3.html">Task 3</a>
+        <a href="./employer-set-project/Task 4a-Developing-A-Solution/Task4a.html">Task 4a</a>
+        <a href="./employer-set-project/Task 4b-Reflection/Task4b.html">Task 4b</a>
+      </div>
+    </div>
+
+    <a href="./Other.html">Other</a>
+
+    </div>
+  </div>
+
+
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
   <main>
     <content>
@@ -36,15 +77,27 @@
     </div>
     </content>
   </main>
+  
   <script>
-    document.querySelector('form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const section = document.getElementById('sections').value;
-      if (section) {
-          window.location.hash = section;
-      }
-    });
+    function jumpToSection() { 
+      document.querySelector('form').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const section = document.getElementById('sections').value;
+        if (section) {
+            window.location.hash = section;
+        }
+      })
+    };
+
+    function openNav() {
+      document.getElementById("myNav").style.width = "100%";
+    }
+
+    function closeNav() {
+      document.getElementById("myNav").style.width = "0%";
+    }
   </script>
+
 </body>
 <footer>
   <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
