centred buttons on ca

--- a/main/html/content-areas/CA2 - Intro To Programming/intro-to-programming.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/intro-to-programming.html
@@ -22,6 +22,7 @@
         </div>
     </header>
 
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -106,6 +107,7 @@
     <a href="subtopic/2.11-common-algorithms/2.11-common-algorithms.html" class="subtopic-box">2.11 Common Algorithms</a>
     <a href="subtopic/2.12-testing/2.12-testing.html" class="subtopic-box">2.12 Testing</a>
 </main>
+</content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
