--- a/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html
+++ b/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html
@@ -21,7 +21,7 @@
             <h1>Legislation and Regulatory Requirements</h1>
         </div>
     </header>
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -96,6 +96,8 @@
         <a href="subtopic/4.1-legislation/4.1-legislation.html" class="subtopic-box">4.1 Legislation</a>
         <a href="subtopic/4.2-guidelines/4.2-guidelines.html" class="subtopic-box">4.2 Guidelines</a>
     </main>
+  
+    </content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
