--- a/main/html/content-areas/CA5 - Business Context/business-context.html
+++ b/main/html/content-areas/CA5 - Business Context/business-context.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -99,6 +99,7 @@
         <a href="subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" class="subtopic-box">5.3 Risk to Organisations of Using Digital Systems</a>
         <a href="subtopic/5.4-technical-change-management/5.4-technical-change-management.html" class="subtopic-box">5.4 Technical Change Management</a>
     </main>
+    </content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
