--- a/main/html/content-areas/CA8 - Security/security.html
+++ b/main/html/content-areas/CA8 - Security/security.html
@@ -21,7 +21,7 @@
             <h1>Security</h1>
         </div>
     </header>
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -98,6 +98,7 @@
         <a href="subtopic/8.3-Threat-Mitigation/8.3-Threat-Mitigation.html" class="subtopic-box">8.3 Threat Mitigation</a>
         <a href="subtopic/8.4-Effective-Security/8.4-Effective-Security.html" class="subtopic-box">8.4 Interrelationship of Components Required for Effective Security </a>
     </main>
+  </content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
