--- a/main/html/content-areas/CA1 - Problem Solving/problem-solving.html
+++ b/main/html/content-areas/CA1 - Problem Solving/problem-solving.html
@@ -21,7 +21,7 @@
             <h1>Problem Solving</h1>
         </div>
     </header>
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -100,6 +100,7 @@
         <a href="subtopic/1.2-algorithmic-design/1.2-algorithmic-design.html" class="subtopic-box">1.2 Algorithmic Design</a>
         <a href="subtopic/1.3-strategies/1.3-strategies.html" class="subtopic-box">1.3 Strategies</a>
     </main>
+  </content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
