--- a/main/html/content-areas/CA3 - Emerging Issues/emerging-issues.html
+++ b/main/html/content-areas/CA3 - Emerging Issues/emerging-issues.html
@@ -22,6 +22,7 @@
         </div>
     </header>
 
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -96,6 +97,7 @@
         <a href="subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html" class="subtopic-box">3.1 Impact of Digital Technologies</a>
         <a href="subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html" class="subtopic-box">3.2 Emerging Technologies</a>
     </main>
+</content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
