--- a/main/html/content-areas/CA6 - Data/data.html
+++ b/main/html/content-areas/CA6 - Data/data.html
@@ -21,7 +21,7 @@
             <h1>Data</h1>
         </div>
     </header>
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -105,6 +105,8 @@
         <a href="subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html" class="subtopic-box">6.11 Data Access Across Platforms</a>
         <a href="subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html" class="subtopic-box">6.12 Data Analysis Tools</a>
     </main>
+
+</content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
