--- a/main/html/content-areas/CA7 - Digital Environments/digital-environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/digital-environments.html
@@ -21,7 +21,7 @@
             <h1>Digital Environments</h1>
         </div>
     </header>
-
+<content>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
@@ -101,6 +101,7 @@
         <a href="subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html" class="subtopic-box">7.6 Resillient Digital Environments</a>
 
     </main>
+    </content>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
