Added google sign in page and sign out button

--- a/main/html/index.html
+++ b/main/html/index.html
@@ -23,6 +23,12 @@
   </header>
 
   <main>
+    <button id="googleSignIn">Sign in with Google</button>
+    <button id="signOut">Sign out</button>
+    <p id="userInfo"></p>
+
+
+
     <content>
       <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -121,8 +127,51 @@
       darkmode = localStorage.getItem('darkmode')
       darkmode !== "active" ? enableDarkmode() : disableDarkmode()
     })
+</script>
 
-  </script>
+<script type="module">
+  // Import Firebase SDKs from CDN
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+  import { getAuth, signInWithPopup, GoogleAuthProvider, signOut } 
+    from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyC_eZWC9B2nWY-5_0UDswLRlL7Ssa1pSt0",
+      authDomain: "tleveltutor.firebaseapp.com",
+      projectId: "tleveltutor",
+      storageBucket: "tleveltutor.firebasestorage.app",
+      messagingSenderId: "978451529313",
+      appId: "1:978451529313:web:33ffc6efd85ad713d8f420",
+      measurementId: "G-T47VXPDZEJ"
+    };
+
+      // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+
+  // Setup Auth
+  const auth = getAuth(app);
+  const provider = new GoogleAuthProvider();
+
+  // Sign in with Google
+  document.getElementById("googleSignIn").addEventListener("click", async () => {
+    try {
+      const result = await signInWithPopup(auth, provider);
+      const user = result.user;
+      document.getElementById("userInfo").innerText = `Hello, ${user.displayName}`;
+      console.log("Signed in:", user);
+    } catch (error) {
+      console.error("Sign in error:", error);
+    }
+  });
+
+  // Sign out
+  document.getElementById("signOut").addEventListener("click", async () => {
+    await signOut(auth);
+    document.getElementById("userInfo").innerText = "Signed out";
+  });
+</script>
 
 </body>
 <footer>
