--- a/main/html/index.html
+++ b/main/html/index.html
@@ -41,6 +41,7 @@
     <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="overlay-content">
+    <spacer></spacer>
     <a href="./index.html">Home</a>
 
     <div class="menu-item">
