--- a/main/html/index.html
+++ b/main/html/index.html
@@ -24,6 +24,7 @@
   </header>
 
   <main>
+    <!--
     <button id="googleSignIn">
       <span>Sign in</span>
       <img id= "google-icon" src="../images/google-icon.png"/>
@@ -33,9 +34,12 @@
       <span>Sign Out</span>
       <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z"/></svg>
     </button>
+  -->
     
     <p id="userInfo"></p>
 
+    <button id="googleSignIn" onclick="window.location.href='log-in.html'">Login</button>
+    <button id="signOut" onclick="window.location.href='sign-up.html'">Sign Up</button>
 
 
     <content>
