--- a/main/html/log-in.html
+++ b/main/html/log-in.html
@@ -21,8 +21,8 @@
     <div class = "login-content">
       <h2>Login</h2>
       <form id = "login-form" action="/action_page.php" method="post">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
+        <label for="uname"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="uname" required>
 
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
