--- a/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
@@ -22,10 +22,10 @@
             <h1>  6.7 - Data Dimensions and Maintenance  </h1>
         </div>
     </header>
-
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
+<div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <br><br><br><br><br>
     <a href="../../../../index.html">Home</a>
     
     <div class="menu-item">
@@ -63,11 +63,11 @@
 
   <script>
   function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("myNav").style.height = "100%";
   }
 
   function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("myNav").style.height = "0";
   }
   
     let darkmode = localStorage.getItem('darkmode')
